fixed navbars from showing double on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,6 @@
   height: 100vh;
   color: #f8f8ff;
   margin: 0em 4em 0em 4em;
-  /* background-color: #362624; */
 }
 
 .main-container {
@@ -27,16 +26,19 @@
   justify-content: center;
 }
 
-.home-link {
+
+/* .home-link {
   position: fixed;
   top: 0;
   left: 0;
+  margin: 0;
+  padding: 0rem 2rem 2rem;
   padding: 4rem 2rem;
   transform: rotate(-90deg);
-  background-color: #362624;
-}
+  border: 1px solid yellow;
+} */
 
-.home-link p {
+/* .home-link p {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 15px;
@@ -47,14 +49,14 @@
   color: #ffcae0;
   cursor: pointer;
   font-style: italic;
-}
+} */
 
 /* Inline Styled */
-.social-nav {
+/* .social-nav {
   position: fixed;
   top: 0;
   left: 0;
-  padding: 0rem 4rem 0rem 4rem;
+  padding: 4rem 2rem;
   transform: rotate(-90deg);
 }
 
@@ -63,15 +65,21 @@
   display: flex;
   gap: 1rem;
   font-family: 'Lato', sans-serif;
-  font-weight: 100;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 15px;
 }
 
-.social-links li {
+.social-links  {
   color: #f8f8ff;
 }
 
-#gh:hover {
+.social-links li:hover {
+  color: #ffcae0;
+  cursor: pointer;
+  font-style: italic;
+} */
+
+/* #gh:hover {
   color: #ffcae0;
   cursor: pointer;
   font-style: italic;
@@ -83,9 +91,9 @@
   cursor: pointer;
   font-style: italic;
   padding-left: 2px;
-}
+} */
 
-.work-link {
+/* .work-link {
   position: fixed;
   top: 0;
   left: 0;
@@ -104,7 +112,7 @@
   color: #ffcae0;
   cursor: pointer;
   font-style: italic;
-}
+} */
 
 .footer {
   position: fixed;
@@ -112,6 +120,7 @@
   left: 0;
   padding: 4rem 2rem;
   transform: rotate(-90deg);
+  border: 1px solid yellow;
 }
 
 .copyright {
@@ -120,24 +129,50 @@
   font-size: 15px;
 }
 
-.slide-in {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #2a1f1e;
-  transform-origin: top;
-  z-index: 1000;
-}
 
-.slide-out {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #2a1f1e;
-  transform-origin: bottom;
-  z-index: 1000;
+/* Mobile styles */
+@media screen and (max-width: 768px) {
+  .main-container {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .home-link {
+    position: fixed;
+    top: 0;
+    left: 1;
+    padding: 4rem 2rem;
+    transform: rotate(-90deg);
+    border: 1px solid yellow;
+    margin: 0rem 0rem 2rem 1rem;
+    padding: 0;
+  }
+
+  .social-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: rotate(-90deg);
+    /* border: 1px solid yellow;
+    margin: 0rem 0rem 2rem 1rem;
+    padding: 0; */
+  }
+
+  .social-nav li:active {
+    color: #ffcae0;
+    cursor: pointer;
+    font-style: italic;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    transform: rotate(-90deg);
+    border: 1px solid yellow;
+    margin: 0rem 0rem 2rem 1rem;
+    padding: 0;
+  }
 }
